Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32374

Shift+Backspace ignores multiline selection

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 16.0.0-beta1
    • Qt Creator 15.0.0
    • Editors
    • None
    • 684aa5527 (16.0)

    Description

      I am unsure if this is a bug or not but it accidentally tripped me up a few times.

      Product: Qt Creator 15.0.0
      Based on: Qt 6.8.1 (GCC 10.3.1 20210422 (Red Hat 10.3.1-1), x86_64)
      Built on: Nov 27 2024 08:29:36
      From revision: 3ac6a5956d

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-32374
          # Subject Branch Project Status CR V

          Activity

            People

              davschul David Schulz
              jokarlss Jonas Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes