Editor: fix shift+backspace handling for multi cursor

Fixes: QTCREATORBUG-32374
Change-Id: I2d1429cc82e3436a43e18a6a3a9d5634be01ce5b
Reviewed-by: Christian Stenger <christian.stenger@qt.io>